<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">照片备份</string>
    <string name="version">1.0.3</string>
    <string name="error_wifi_only_no_connection">无 Wifi 连接</string>
    <string name="error_no_connection">没有互联网连接</string>

    <!-- 状态 -->
    <string name="status_backup_details">已备份 %1$d/%2$d 张照片</string>
    <string name="status_backup_details2">%1$s</string>
    <string name="ui_sync_button_label_start">开始备份</string>
    <string name="ui_sync_button_label_stop">暂停备份</string>
    <string name="status_running">正在备份</string>
    <string name="status_init">请先连接账户，并设置备份相册</string>
    <string name="status_error">错误</string>
    <string name="status_done">完成备份</string>
    <string name="status_idle">等待备份</string>
    <string name="ui_dialog_first_run_msg">这是第一次备份，是否需要备份当前设备上的 %1$d 张照片？</string>
    <string name="ui_wifi_only_label">需要 Wifi</string>
    <string name="ui_wifi_only_desc">仅在连接到 Wifi 网络时才进行备份</string>

    <!-- 账户 -->
    <string name="ui_connect_title">连接豆瓣账户</string>
    <string name="ui_connect_summary">点此连接你的豆瓣账户</string>
    <string name="ui_connect_summary_connected">已使用账户 %1$s 连接。</string>
    <string name="ui_connect_logining">正在登录豆瓣</string>
    <string name="ui_connect_ing">正在连接豆瓣账户</string>
    <string name="ui_dialog_disconnect_msg">您确认要断开连接吗？您将需要重新连接账户，并且同步状态将被重置。</string>

    <!-- 相册 -->
    <string name="ui_choose_album_title">设置备份相册</string>
    <string name="ui_choose_album_summary">点此设置备份相册，因隐私关系，请尽量选择“仅自己可见”的相册</string>
    <string name="ui_dialog_choose_public_album_warn">确定选择这个 %1$s 的相册作为备份相册吗？照片自动备份后，可能会有隐私问题。</string>
    <string name="ui_choose_album_summary_selected">已设置将照片备份到相册《%1$s》</string>
    <string name="ui_loading_album">正在获取豆瓣相册信息</string>
    <string name="ui_album_privacy_private">仅自己可见</string>
    <string name="ui_album_privacy_friend">仅朋友可见</string>
    <string name="ui_album_privacy_public">所有人可见</string>
    <string name="ui_album_create">创建相册</string>
    <string name="ui_album_create_title">输入相册名称</string>
    <string name="error_no_album">要备份的相册已不存在</string>

    <!-- 版本 -->
    <string name="ui_version_title">版本</string>
    <string name="ui_version_summay">版本号：%1$s, 如有问题请联系 @猪头小队长</string>

</resources>